--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <script src="./test_2.js" type="text/javascript"></script>
     <script src="./test_3.js" type="text/javascript"></script>
     <script src="./test_4.js" type="text/javascript"></script>    
+    <script src="./test_5.js" type="text/javascript"></script>    
+
   </body>
 </html>
